unpackaged/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <description>this Object is used to track Payment Information for Patient/Applicant.</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>