unpackaged/main/default/objects/Payment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup with Account to Populate Name of the Patient/Applicant.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>