unpackaged/main/default/objects/Payment__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup with Application, to Populate Application Id.</description>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>