unpackaged/main/default/objects/Payment__c/fields/Care_Program__c.field-meta.xml
<CustomField>
    <fullName>Care_Program__c</fullName>
    <description>Populate Care Program Name from Care Program.</description>
    <label>Care Program</label>
    <referenceTo>CareProgram</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>