unpackaged/main/default/objects/Payment__c/fields/Check_ACH_Ref_Num__c.field-meta.xml
<CustomField>
    <fullName>Check_ACH_Ref_Num__c</fullName>
    <description>Enter Check or ACH Reference Number for this Transaction.</description>
    <label>Check Number/ACH Reference Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>