unpackaged/main/default/objects/Payment__c/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <description>Auto Populate Check Number from Application.</description>
    <formula>Application__r.Check_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>