unpackaged/main/default/objects/Payment__c/fields/Method_of_Payment_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Payment_Distribution__c</fullName>
    <description>Auto Populate Payment Distribution Method from Application.</description>
    <formula>TEXT( Application__r.Method_of_Payment_Distribution__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Method of Payment Distribution</label>
    <type>Text</type>
</CustomField>