unpackaged/main/default/objects/Payment__c/fields/Name_of_Bank__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Bank__c</fullName>
    <description>Auto Populate Bank Name from Application.</description>
    <formula>Application__r.Bank_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Name</label>
    <type>Text</type>
</CustomField>