unpackaged/main/default/objects/Payment__c/fields/Name_on_Account__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Account__c</fullName>
    <description>Auto Populate Account Holder Name from Application.</description>
    <formula>Application__r.Name_on_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name on Account</label>
    <type>Text</type>
</CustomField>