unpackaged/main/default/objects/Payment__c/fields/Payment_Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Error_Details__c</fullName>
    <description>Reason for Payment get failed.</description>
    <label>Payment Error Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>