unpackaged/main/default/objects/Payment__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Status of Application Payment. default the Payment Status is Pending.</description>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payment Processing</fullName>
            </value>
            <value>
                <fullName>Payment Error</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>