unpackaged/main/default/objects/Payment__c/fields/Payout_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payout_Amount__c</fullName>
    <description>Lookup with  Care Program, to Populate Payout Amount from Care Program.</description>
    <formula>Care_Program__r.Payout_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payout Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>