unpackaged/main/default/objects/Payment__c/fields/PeopleSoft_Id__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Id__c</fullName>
    <description>Map with People Soft, while import/export data.</description>
    <externalId>true</externalId>
    <inlineHelpText>PeopleSoft Voucher ID</inlineHelpText>
    <label>PeopleSoft Id (Voucher)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>