unpackaged/main/default/objects/Payment__c/fields/Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time__c</fullName>
    <description>Use this field for making Reports &amp; Dashboards to get difference from Payment Date, Payment Created Date.</description>
    <formula>Payment_Date__c  -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processing Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>