unpackaged/main/default/objects/Payment__c/fields/Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number__c</fullName>
    <description>Auto Populate from Applications.</description>
    <formula>Application__r.Routing_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Routing Number</label>
    <type>Text</type>
</CustomField>