unpackaged/main/default/objects/Payment__c/fields/Type_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Account__c</fullName>
    <description>Auto Populate Account Type based on Application Id.</description>
    <formula>TEXT( Application__r.Account_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>