unpackaged/main/default/objects/Payment__c/validationRules/Restrict_Manual_Payment_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Manual_Payment_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), $Profile.Name == &quot;Accounting&quot;)&amp;&amp; (!$Setup.Bypass__c.Validation__c ||(LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;all&quot; &amp;&amp; LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;payment__c&quot;))</errorConditionFormula>
    <errorMessage>You do not have permission to create this record</errorMessage>
</ValidationRule>