unpackaged/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>Application__c</columns>
    <columns>Amount__c</columns>
    <columns>NAME</columns>
    <columns>Payment_Status__c</columns>
    <columns>Payment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>