unpackaged/main/default/objects/Payment__c/listViews/Paid_Payments.listView-meta.xml
<ListView>
    <fullName>Paid_Payments</fullName>
    <columns>NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>Application__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Payment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <label>Paid Payments</label>
</ListView>