unpackaged/main/default/objects/Payment__c/listViews/Payments_In_Processing.listView-meta.xml
<ListView>
    <fullName>Payments_In_Processing</fullName>
    <columns>Account__c</columns>
    <columns>Application__c</columns>
    <columns>NAME</columns>
    <columns>Payment_Status__c</columns>
    <columns>Payment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Payment Processing,Payment _Processing</value>
    </filters>
    <label>Payments In Processing</label>
</ListView>