unpackaged/main/default/objects/Payment__c/listViews/Payments_with_Errors.listView-meta.xml
<ListView>
    <fullName>Payments_with_Errors</fullName>
    <columns>NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>Application__c</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Payment_Error_Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Payment Error</value>
    </filters>
    <label>Payments with Errors</label>
</ListView>